# circuit-motifs

./: .gitattributes  .gitignore  CITATION.cff  LICENSE  README.md  app.py  pyproject.toml  requirements.txt  unrolled_draft_post.md  unrolled_motifs_coding_plan.md
data/examples/: capital-state-dallas.json  opposite_of_small.json
figures/: generate_clt_vs_plt.py  generate_cross_model.py  generate_ffl_cascade.py  generate_fig2_motif_profile.py  generate_fig4_task_heatmap.py  generate_size_normalization.py  run_cross_model.py
notebooks/: 02_single_graph.ipynb  03_factual_vs_multihop.ipynb  05_motif_instance_demo.ipynb  06_full_analysis.ipynb  07_neuron_graphs.ipynb  07_scale_comparison.ipynb
scripts/: collect_scale_data.py  neuron_motif_analysis.py  neuron_vs_transcoder.py  unrolled_analysis.py  unrolled_cascade.py  unrolled_figures.py  unrolled_null_pilot.py
src/: __init__.py  comparison.py  graph_loader.py  models.py  motif_census.py  neuron_graph.py  neuronpedia_client.py  null_model.py  pipeline.py  scale_comparison.py  unrolled_census.py  unrolled_motifs.py  unrolled_null_model.py  unrolled_visualization.py  visualization.py
tests/: test_graph_loader.py  test_models.py  test_motif_census.py  test_motif_instances.py  test_neuron_graph.py  test_null_model.py  test_scale_comparison.py  test_unrolled_motifs.py
